--- a/web/client/index.html
+++ b/web/client/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
     <meta name="description" content="Remote Control Management Console">
     <title>Remote Control Management Console</title>
 </head>
 <body>
-<div id="root" style="height: 100%"></div>
+<div id="app" style="height: 100%"></div>
 </body>
 </html>
