routing, redux environment

--- a/web/client/index.html
+++ b/web/client/index.html
@@ -7,6 +7,6 @@
     <title>Remote Control Management Console</title>
 </head>
 <body>
-    <div id="app" style="height: 100%"></div>
+    <div id="root" style="height: 100%"></div>
 </body>
 </html>
